--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -987,8 +987,8 @@ href="PVA3_421.html">here</a>.</p>
 <p>Next, download the Excel document for this example <a
 href="Loggerhead2024.xlsx">here</a>. We will work through the Excel
 example in class.</p>
-<p>NOTE: a worked version of the spreadsheet can be found here<a
-href="Loggerhead2024_worked.xlsx"></a></p>
+<p>NOTE: a worked version of the spreadsheet can be found <a
+href="Loggerhead2024_worked.xlsx">here</a></p>
 <p>Using your Excel spreadsheet, investigate four management scenarios
 for the loggerhead turtle population:</p>
 <ol style="list-style-type: decimal">
@@ -1017,7 +1017,7 @@ from LJ to LJ)<br />
 </ul></li>
 </ol>
 <div class="float">
-<img src="ted1.jpg" alt="turtle excluder device" />
+<img src="TED1.jpg" alt="turtle excluder device" />
 <div class="figcaption">turtle excluder device</div>
 </div>
 <p><strong>Top Hat</strong>: Which of the four management
