--- a/schedule.html
+++ b/schedule.html
@@ -577,7 +577,7 @@ models</a></td>
 <td align="left">3/6/2024</td>
 <td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
 uncertainty</a></td>
-<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
+<td align="left"><a href="Regan_2002.pdf">Regan 2002</a> (Optional)</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
