--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -462,7 +462,7 @@ div.tocify {
 that small populations are uniquely sensitive to; once a population gets
 small enough, <em>demographic stochasticity</em>, <em>genetic
 drift</em>, and <em>inbreeding depression</em> can together deliver the
-final blow to a population.</p>
+‘final blow’ to a population.</p>
 <p>In conservation biology the study of the drivers of extinction for
 small populations is called the <em>small-population paradigm</em>. The
 small-population paradigm refers to the tendency in <strong>conservation
