--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -612,7 +612,7 @@ href="https://www.cpsg.org/our-approach/science-based-tools/vortex">Vortex</a>,
 gets its name from the extinction vortex concept. Vortex does allow
 explicit modeling of inbreeding and loss of genetic diversity in small
 populations.</p>
-<p><img src="vortex10.jpg" style="width:50.0%" /></p>
+<p><img src="Vortex10.jpg" style="width:50.0%" /></p>
 </div>
 <div id="example-aruba-island-rattlesnake" class="section level2">
 <h2>Example: Aruba island rattlesnake</h2>
@@ -629,11 +629,11 @@ has several attributes that make it particularly susceptible to falling
 into the extinction vortex:</p>
 <p>See <a href="LAB5.html">Lab 5</a> for the related MVP activity.</p>
 <p><strong>Q</strong> Why are island-endemic species like the Aruba
-rattlesnake so vulnerable to extinction? [PointSolutions]</p>
+rattlesnake so vulnerable to extinction? [Top Hat]</p>
 <p><strong>Q</strong> Are species that are confined to small areas (like
 the Aruba rattlesnake) more vulnerable to <em>environmental
 stochasticity</em> than species that occupy larger geographic ranges?
-[PointSolutions]</p>
+[Top Hat]</p>
 <p><a href="LECTURE11.html">–go to next lecture–</a></p>
 </div>
 
