--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -540,9 +540,9 @@ in small populations). If parents are close relatives, both parents have
 a relatively high probability of inheriting at least one of the same
 ‘bad’ gene variants from a single common ancestor!</p>
 <p>If you consider that that single common ancestor likely had
-<em>lots</em> of deleterious recessive alleles embedded in their genome,
-then the chance of an inbred offspring inheriting two copies of that
-allele for at least one of those loci becomes fairly high!</p>
+deleterious recessive alleles embedded in their genome at many unique
+loci, then the chance of an inbred offspring inheriting two deleterious
+copies in at least one of those loci becomes fairly high!</p>
 </div>
 <div id="extinction-vortex" class="section level2">
 <h2>Extinction vortex</h2>
@@ -552,10 +552,11 @@ paradigm is the concept of the <strong>extinction vortex</strong>. This
 concept is illustrated in the above figure.</p>
 <p>Once a population gets small enough, it becomes subject to
 catastrophic declines due to demographic (and environmental)
-stochasticity, leading to inbreeding and random loss of useful genes,
-leading to reduced vital rates, leading to smaller population sizes,
-leading to further genetic degradation, leading to greater influence of
-demographic stochasticity, leading ultimately to extinction…</p>
+stochasticity, leading to inbreeding and random loss of useful genes
+(genetic drift), leading to reduced vital rates, leading to smaller
+population sizes, leading to further genetic degradation, leading to
+greater influence of demographic stochasticity, leading ultimately to
+extinction…</p>
 <p>Furthermore, once a population falls into the extinction vortex, it
 can’t necessarily be saved by removing the factors that caused the
 population to become small in the first place. That is, once genetic
@@ -563,7 +564,7 @@ drift has removed important adaptive variation from the gene pool, and
 once inbreeding has caused deleterious recessive alleles to start
 expressing more frequently, the population may not be able to be
 recovered effectively.</p>
-<p>Case study: florida panther genetic rescue.</p>
+<p>Case study: Florida panther genetic rescue.</p>
 <p>In general, extinction is often caused by stochastic processes, but
 stochastic factors are unlikely to be the reason the population got
 small in the first place! (that is the topic of the ‘declining
