--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -507,7 +507,7 @@ represent different genetic variants. Each jar, left to right,
 represents a different (non-overlapping) generation.</p>
 <p>Does this sound familiar? Just by random chance, some individuals
 will breed and some will not. Just by random chance, some individuals
-will have more of their offspring survive. Genetic drift is simply a
+will have more of their offspring survive. Genetic drift is a
 consequence of <strong>demographic stochasticity</strong>.</p>
 <p>Finally, let’s imagine that the red balls represent individuals that
 are more resilient to drought (but have no selective advantage or
@@ -543,6 +543,13 @@ a relatively high probability of inheriting at least one of the same
 deleterious recessive alleles embedded in their genome at many unique
 loci, then the chance of an inbred offspring inheriting two deleterious
 copies in at least one of those loci becomes fairly high!</p>
+<p>In a way, inbreeding depression and genetic drift represents a kind
+of <strong>Allee effect</strong>, where population vital rates can
+deteriorate as the population size is reduced (positive density
+dependence). Unfortunately, unlike the Allee effects we have studied
+earlier in this class, this kind of Allee effect can have long-term
+consequences even if the population size is increased, since the gene
+pool can remain degraded.</p>
 </div>
 <div id="extinction-vortex" class="section level2">
 <h2>Extinction vortex</h2>
@@ -562,9 +569,10 @@ can’t necessarily be saved by removing the factors that caused the
 population to become small in the first place. That is, once genetic
 drift has removed important adaptive variation from the gene pool, and
 once inbreeding has caused deleterious recessive alleles to start
-expressing more frequently, the population may not be able to be
-recovered effectively.</p>
+expressing more frequently, the population may not be able to recover
+effectively.</p>
 <p>Case study: Florida panther genetic rescue.</p>
+<p><img src="panther1.jpg" style="width:50.0%" /></p>
 <p>In general, extinction is often caused by stochastic processes, but
 stochastic factors are unlikely to be the reason the population got
 small in the first place! (that is the topic of the ‘declining
@@ -608,11 +616,10 @@ small population paradigm). This can include genetic drift and
 inbreeding depression. However, in this course, we won’t get into
 modeling genetics (unless you really want to- I’m happy to show you how
 to do this using the Vortex software!)</p>
-<p>The most widely-used PVA software, <a
-href="https://www.cpsg.org/our-approach/science-based-tools/vortex">Vortex</a>,
-gets its name from the extinction vortex concept. Vortex does allow
-explicit modeling of inbreeding and loss of genetic diversity in small
-populations.</p>
+<p>One of the most widely-used PVA software packages, <a
+href="https://scti.tools/vortex/">Vortex</a>, gets its name from the
+extinction vortex concept. Vortex does allow explicit modeling of
+inbreeding and loss of genetic diversity in small populations.</p>
 <p><img src="Vortex10.jpg" style="width:50.0%" /></p>
 </div>
 <div id="example-aruba-island-rattlesnake" class="section level2">
@@ -624,10 +631,10 @@ primarily consumes rodents.</p>
 <p>The Aruba island rattlesnake, as you might expect, occurs only on the
 island of Aruba.</p>
 <p><img src="aruba1.png" style="width:50.0%" /></p>
-<p>The Aruba rattlesnake was listed as <em>Critically Endangered</em> by
-IUCN (it is no longer listed as of 2021 due to lack of information), and
-has several attributes that make it particularly susceptible to falling
-into the extinction vortex:</p>
+<p>The Aruba rattlesnake was previously listed as <em>Critically
+Endangered</em> by IUCN (it is no longer listed as of 2021 due to lack
+of information), and has several attributes that make it particularly
+susceptible to falling into the extinction vortex:</p>
 <p>See <a href="LAB5.html">Lab 5</a> for the related MVP activity.</p>
 <p><strong>Q</strong> Why are island-endemic species like the Aruba
 rattlesnake so vulnerable to extinction? [Top Hat]</p>
